--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-    <head>
-        <!--- CSS styles here -->
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-
 <body>
     <header>
-        <title>Statelessness and Exile: The continued repression of Nicaraguans after their release from prison</title>
-        <div>
-            <h1>Statelessness and Exile: The continued repression of Nicaraguans after their release from prison</h1>
+        <title><span style="color: black; background-color: #E6FF9B; font-family:'Times New Roman, serif'; font-size:20px;">Statelessness and Exile:</span> The continued repression of Nicaraguans after their release from prison</title>
+        <div style="height: 250px"></div>
+        <div style="height: 150px; margin:10%">
+            <p><span style="color: black; background-color:#E6FF9B; font-family:'Times New Roman', serif; font-size:27px;">Statelessness and Exile:</span></p>
+            <p style="font-family: arial; font-size: 18px;">The continued repression of Nicaraguans after their release from prison</p>
         </div>
     </header>
 
     <main>
+        <section style="background-color:white; height: 250px;">
+
+        </section>
+
+        <section style="font-family: arial">
+            <div style="height: 150px"></div>
+            <div style="text-align: center;">
+                <p>In February 2023, the Ortega-Murillo government released</p>
+                <p style="font-size: 250px; margin: 0%">222</p>
+                <p>political prisoners</p>
+            </div>
+            <div style="height: 150px"></div>
+        </section>
+
+        <section style="background-color:white; font-family: arial; font-size: 18px;">
+            <div>
+                <p>
+
+                </p>
+            </div>
+        </section>
+
         <section>
             <div class="flourish-embed flourish-cards" data-src="visualisation/13712597"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
         </section>
@@ -30,3 +49,26 @@
         | Isabel Bonnet
     </footer>
 </body>
+
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
+
+    #spacer {
+        height: 800px;
+    }
+    
+    footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 1rem;
+        font-size: 12px;
+        text-align: right;
+        color: black;
+        font-family: "Proxima Nova", sans-serif;
+    }
+
+</style>
