--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div style="height: 150px"></div>
         </section>
 
+        <section style="background-color:white; height: 250px;"></section>
+
         <section style="background-color:white; font-family: arial; font-size: 18px;">
             <div>
                 <p>
