--- a/index.html
+++ b/index.html
@@ -16,17 +16,25 @@
 
         </section>
 
+        <section style="background-color:white; height: 250px;">
+            <div style="font-size: 250px; text-align: center;">
+                <p>2018</p>
+            </div>
+            <div style="font-size: 250px; text-align: center;">
+                <p>2022</p>
+            <div style="font-size: 250px; text-align: center;">
+                <p>Feb. 2023</p>
+        </section>
+
         <section style="font-family: arial">
             <div style="height: 150px"></div>
             <div style="text-align: center;">
-                <p>In February 2023, the Ortega-Murillo government released</p>
+                <p>The Ortega-Murillo government released</p>
                 <p style="font-size: 250px; margin: 0%">222</p>
                 <p>political prisoners</p>
             </div>
             <div style="height: 150px"></div>
         </section>
-
-        <section style="background-color:white; height: 250px;"></section>
 
         <section style="background-color:white; font-family: arial; font-size: 18px;">
             <div>
