--- a/index.html
+++ b/index.html
@@ -12,29 +12,56 @@
     </header>
 
     <main>
-        <section style="background-color:white; height: 250px;">
-
+        <section style="background-color:white;">
+            <div style="height: 100px"></div>
+            <div class="container; margin">
+                <div style="color:black; margin: 2%">
+                    <p>Nicaragua </p>
+                    <p>
+                        At its peak, hundreds of thousands of Nicaraguans took to streets in various cities in marches organized by Catholic churches calling for Ortega to step down.
+                        By September 2018, Ortega declared protests of any kind to be illegal. And by February 2019, thousands had already been arrested and over 300 Nicaraguans killed by their own security forces. 
+                    </p>
+                    <p>
+                        Since 2018, Ortega and his wife Murillo have presided over the closure of dozens of news outlets, jailing journalists, activists, politicians, rival presidential candidates and even priests. 
+                    </p>
+                    <p>
+                        A few months ago, an influential Catholic bishop was placed under house arrest and eight of his colleagues were jailed.
+                        By cracking down on the church, Ortega is sending a clear message to Nicaraguans: no dissent, no criticism, no disagreement will be brooked.
+                    </p>
+                </div>
+                <div style="width:50%; margin-left: 30%">
+                    <iframe title="" aria-label="Map" id="datawrapper-chart-jRgk7" src="https://datawrapper.dwcdn.net/jRgk7/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="100" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+                    </script>
+                </div>
+            </div>
         </section>
 
-        <section style="background-color:white; height: 250px;">
-            <div style="font-size: 250px; text-align: center;">
+        <section style="background-color:white; color:black">
+            <div style="font-size: 100px; text-align: center;">
                 <p>2018</p>
             </div>
-            <div style="font-size: 250px; text-align: center;">
-                <p>2022</p>
-            <div style="font-size: 250px; text-align: center;">
-                <p>Feb. 2023</p>
+            <div>
+                <p style="font-size: 100px; text-align: center;">2022</p>
+                <p>
+                    When I first spoke to Renata Holmann, had not spoken to her father in 13 months. But for her, returning to Nicaragua is out of the question. She is one of the many family members of political prisoners who have spoken up against Ortega’s regime and denounced its many human rights violations. But they can only speak from the relative safety of a foreign country.
+                </p>
+                <p>
+                    “I have the opportunity to talk about the situation in Nicaragua now that I live in the United States,” Renata said. “Anyone in Nicaragua who dares to speak against the government, or just tell the truth, is in danger.”
+                </p>
+            <div style="font-size: 100px; text-align: center;">
+                <p>2023</p>
         </section>
 
-        <section style="font-family: arial">
+        <section style="font-family: arial; background-color:black">
             <div style="height: 150px"></div>
             <div style="text-align: center;">
-                <p>The Ortega-Murillo government released</p>
+                <p>In February 2023, the Ortega-Murillo government released</p>
                 <p style="font-size: 250px; margin: 0%">222</p>
                 <p>political prisoners</p>
             </div>
             <div style="height: 150px"></div>
         </section>
+
 
         <section style="background-color:white; font-family: arial; font-size: 18px;">
             <div>
@@ -79,6 +106,10 @@
         text-align: right;
         color: black;
         font-family: "Proxima Nova", sans-serif;
+    }
+
+    .container {
+        display: grid;
     }
 
 </style>
