--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <main>
         <section style="background-color:white;">
-            <div style="height: 100px"></div>
+            <div style="height: 10px"></div>
             <div class="container; margin">
-                <div style="color:black; margin: 2%">
-                    <p>Nicaragua </p>
+                <div style="color:black; margin: 10%">
+                    <p>In Nicaragua, human rights violations have become a part of the population's daily life. Last year, it was one of the world's least democratic countries, ranking 143 in the <a href="https://pages.eiu.com/rs/753-RIQ-438/images/DI-final-version-report.pdf?mkt_tok=NzUzLVJJUS00MzgAAAGLOZtpRcaxwgU2EssXeXmlofoIg_gt5aZ7uWwc2-hQbPV13MLuvm9E1Lx2LANeoEDOHyR6wlu8e-vEmL4bzduxRfrmKg0clfy7tKdrWMkDgvQufQ">EIU Democracy Index</a>, beating authoritarian regimes in Venezuela, Russia and Iran.</p>
+                    <p>President Daniel Ortega and his wife, vice president Rosario Murillo, have been leading the Central American nation since 2007. Under their regime, human rights violations have become a part of the population's daily life, leading to decades of political turmoil.</p>
                     <p>
                         At its peak, hundreds of thousands of Nicaraguans took to streets in various cities in marches organized by Catholic churches calling for Ortega to step down.
                         By September 2018, Ortega declared protests of any kind to be illegal. And by February 2019, thousands had already been arrested and over 300 Nicaraguans killed by their own security forces. 
