--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <p>
                         In Nicaragua, human rights violations have become a part of the population's daily life. Last year, it was one of the world's least democratic countries, ranking 143 in the <a href="https://pages.eiu.com/rs/753-RIQ-438/images/DI-final-version-report.pdf?mkt_tok=NzUzLVJJUS00MzgAAAGLOZtpRcaxwgU2EssXeXmlofoIg_gt5aZ7uWwc2-hQbPV13MLuvm9E1Lx2LANeoEDOHyR6wlu8e-vEmL4bzduxRfrmKg0clfy7tKdrWMkDgvQufQ">EIU Democracy Index</a>, beating authoritarian regimes in Venezuela, Russia and Iran.</p>
                     <p>
-                        But Nicaraguans are fighting back. For the past decades, the Central American nation has been flooded with social uprisings in attempts to overthrown the Ortega-Murillo regime and demanding justice for the victims of the repression and censorship their endure. President Daniel Ortega and his wife, vice president Rosario Murillo, have been leading Nicaragua since 2007.</p>
+                        But Nicaraguans are fighting back. For the past decades, the Central American nation has been flooded with social uprisings in attempts to overthrown the Ortega-Murillo regime. President Daniel Ortega and his wife, vice president Rosario Murillo, both leading Nicaragua since 2007, have responded with censorship and repression of all forms.</p>
                     <p>
                         At its peak, hundreds of thousands of Nicaraguans took to streets in various cities in marches organized by Catholic churches calling for Ortega to step down.
                         By September 2018, Ortega declared protests of any kind to be illegal. And by February 2019, thousands had already been arrested and over 300 Nicaraguans killed by their own security forces. 
