--- a/index.html
+++ b/index.html
@@ -63,20 +63,27 @@
         </section>
 
         <section style="font-family: arial; background-color:black">
-            <div style="height: 150px;"></div>
-            <div class="flourish-embed flourish-chart" style="width: 70%; margin-left: 15%;" data-src="visualisation/13757635"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-        </section>
-
-        <section style="font-family: arial; background-color:black">
             <div style="height: 150px"></div>
             <div style="text-align: center;">
                 <p>In February 2023, the Ortega-Murillo government released</p>
                 <p style="font-size: 250px; margin: 0%">222</p>
                 <p>political prisoners</p>
             </div>
-            <div style="height: 150px"></div>
+            <div style="height: 170px"></div>
         </section>
 
+        <section style="background-color:black">
+            <div style="color:white; margin: 10%; font-size: 20px">
+                <p>
+                    The 222 political prisoners spent altogether over <b style="font-family: Arial, Helvetica, sans-serif">147,030</b> days behind bars, which would be equivalent to nearly <b style="font-family: Arial, Helvetica, sans-serif">403</b> years deprived of their freedom.
+                </p>
+                <p>
+                    They were politicians, activists, journalists, religious practitioners and their family members. Although the majority of young activists were released during the pandemic, a large proportion of the incarcerated people were young adults. Ezequiel de Jesus Gonzalez Alvarado, for instance, spent three years and a half deprived of his freedom before he was released in February. The 23-year-old
+                </p>
+            </div>
+            <div style="height: 180px;"></div>
+            <div class="flourish-embed flourish-chart" style="width: 70%; margin-left: 15%;" data-src="visualisation/13757635"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+        </section>
 
         <section style="background-color:white; font-family: arial; font-size: 18px;">
             <div>
