--- a/index.html
+++ b/index.html
@@ -205,9 +205,51 @@
         <section style="background-color:white">
             <div style="height: 150px;"></div>
             <div style="color:black; margin: 10%; font-size: 20px">
-
+                <p>
+                    Revoking someone's citizenship can lead to catastrophic consequences:
+                </p>
+                <div style="margin-left: 30%; font-size:25px">
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B;">No legal protection</span></li>
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B">No right to vote</span></li>
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B">Lack of access to education</span></li>
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B">Unemployment</span></li>
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B">No access to health care</span></li>
+                    <li style="padding:10px"><span style="color: black; background-color: #E6FF9B">No property rights</span></li>
+                </div>
+                <div style="height: 250px;"></div>
             </div>
-            <div style="height: 150px;"></div>
+        </section>
+
+        <section style="font-family: arial; background-color:black">
+            <div style="height: 150px"></div>
+            <div style="text-align: center;">
+                <p>The UNHCR estimates that there are</p>
+                <p style="font-size: 250px; margin: 0%">10M</p>
+                <p>stateless people in the world</p>
+            </div>
+            <div style="height: 200px"></div>
+        </section>
+
+        <section style="background-color:white">
+            <div style="color:black; margin: 10%; font-size: 20px">
+                <div style="height: 250px;"></div>
+                <div>
+                <p>
+                    Victoria Cardenas reunited with her husband in February 2023 for the first time in years. But the reunion is bittersweet. "The majority of the prisoners left their families behind," Felix Madariaga said in an interview with Christine Amanpour.
+                </p>
+                <p>
+                    Juan Sebastian Chamorro is with his wife Victoria, but he can no longer return to Nicaragua. In the interview with Amanpour, Chamorro added that he continues to feel repressed by the Ortega-Murillo government as he is unable to fight back from his country.
+                </p>
+                </div>
+                <div style="height: 250px;"></div>
+                <p>
+                    In Javier Corrales’ book <a href="https://www.amazon.com/Venezuelas-Transition-Authoritarianism-Javier-Corrales/dp/0815738072">“Autocracy Rising,”</a> the author explains how governments become fully autocratic by eliminating all opposition leaders.
+                </p>
+                <p>
+                By sending all those political prisoners abroad, Ortega is, in a way, successfully getting rid of his enemies, all while avoiding international pressures that condemn his government for human rights violations.
+                </p>
+                <div style="height: 300px;"></div>
+            </div>
         </section>
 
     </main>
